Fri Aug  9 12:11:25 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (cmd): Add comment regarding synonyms.

Thu Aug  8 14:40:10 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c: Remove synonyms for "cvs annotate".  Synonyms create
	user confusion.

Thu Aug  8 10:24:04 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* main.c: Revert (undocumented) change to rename the cvs history
	alias "his" to "hist"

Wed Aug  7 18:26:25 1996  Ian Lance Taylor  <ian@cygnus.com>

	* server.c (cvs_output): Change str parameter to const char *.
	Correct loop to print from p, not str.
	(cvs_outerr): Likewise.
	* cvs.h (cvs_output, cvs_outerr): Update declarations.

	* server.c (receive_partial_file): Read and discard remaining file
	data on a write error.
	(serve_modified): Discard data while size > 0, not >=.

Wed Aug  7 15:11:40 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* main.c (cmds): Add some aliases for "annotate".
	(usg): Improve usage message text
	(cmd_synonyms): New function to print the command synonym list
	(main): Add new option --help-synonyms

Wed Aug  7 00:07:31 1996  Ian Lance Taylor  <ian@cygnus.com>

	Keep track of subdirectories in the Entries file.
	* cvs.h (enum ent_type): Define.
	(struct entnode): Add type field.
	(struct stickydirtag): Add subdirs field.
	(Subdirs_Known, Subdir_Register, Subdir_Deregister): Declare.
	(ignore_files): Update declaration for new parameter.
	(FILESDONEPROC): Add entries parameter.
	(DIRENTPROC, DIRLEAVEPROC): Likewise.
	* entries.c (Entnode_Create): Add type parameter.  Change all
	callers.
	(write_ent_proc): If closure is not NULL, treat it as a pointer to
	an int, and set it to 1 if a node is seen which is not ENT_FILE.
	(write_entries): If subdirectory information is known, but no
	subdirectories were written, write an unadorned D to the file.
	(Scratch_Entry): Write an R command to Entries.Log.  Don't rewrite
	the Entries file.
	(Register): Set entfilename.  Write an A command rather than an